changed the "Guest" header to "AWAY"

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 </div>
             </div>
             <div>
-                <h3 class="team-title">GUEST</h3>
+                <h3 class="team-title">AWAY</h3>
                 <div class="point-window" id="score-guest">
                     <p>0</p>
                 </div>
